--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="title__text">Check Our approches step by step ( how we do it )</div>
         </div>
         <ul class="approach__list"> 
-          <li class="approach__item"><a class="approach__image"><img class="approach__picture" src="../images/step-1.jpg" alt="picture">
+          <li class="approach__item"><a class="approach__image"><img class="approach__picture" src="images/step-1.jpg" alt="picture">
               <div class="approach__step">step</div></a>
             <div class="approach__text">
               <div class="approach__title">Step 1 : Heading Here</div>
@@ -68,7 +68,7 @@
               </p>
             </div>
           </li>
-          <li class="approach__item"><a class="approach__image"><img class="approach__picture" src="../images/step-2.jpg" alt="picture">
+          <li class="approach__item"><a class="approach__image"><img class="approach__picture" src="images/step-2.jpg" alt="picture">
               <div class="approach__step">step</div></a>
             <div class="approach__text">
               <div class="approach__title">Step 2 : Heading Here</div>
@@ -78,7 +78,7 @@
               </p>
             </div>
           </li>
-          <li class="approach__item"><a class="approach__image"><img class="approach__picture" src="../images/step-3.jpg" alt="picture">
+          <li class="approach__item"><a class="approach__image"><img class="approach__picture" src="images/step-3.jpg" alt="picture">
               <div class="approach__step">step</div></a>
             <div class="approach__text">
               <div class="approach__title">Step 3 : Heading Here</div>
@@ -88,7 +88,7 @@
               </p>
             </div>
           </li>
-          <li class="approach__item"><a class="approach__image"><img class="approach__picture" src="../images/step-4.jpg" alt="picture">
+          <li class="approach__item"><a class="approach__image"><img class="approach__picture" src="images/step-4.jpg" alt="picture">
               <div class="approach__step">step</div></a>
             <div class="approach__text">
               <div class="approach__title">Step 4 : Heading Here</div>
